Corrected bleed on mobile, and banner stickyness

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -11,6 +11,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
 
+.navbar{
+    overflow-x: hidden;
+    width:100%;
+    height:100%;
+}
+
 .navbar-active {
     color: #3fbd78;
     border-bottom: 1px solid #e5e5e5;
@@ -119,12 +125,17 @@ body {
     background-color: #e7e5e5a1;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    /* width:100%;
+    height:100%; */
 }
 
 section {
     text-decoration: none;
     padding-left: 6px;
     padding-right: 6px;
+    /* overflow-x: hidden;
+    width:100%;
+    height:100%; */
 }
 
 .img-fluid {
